--- a/exports.html
+++ b/exports.html
@@ -73,7 +73,7 @@
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
         <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item active" data-nav="export">Export / Reports</a>
-        <a href="#" class="nav-item disabled" data-nav="settings">Settings</a>
+        <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
       </nav>
     </aside>
     <div class="app-content">
