Add insights page for trends and regions

--- a/records.html
+++ b/records.html
@@ -321,7 +321,7 @@
     <aside class="side-nav">
       <nav class="nav-items">
         <a href="records.html" class="nav-item" data-nav="records">My Records</a>
-        <a href="#" class="nav-item disabled" data-nav="insights">Insights</a>
+        <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
       </nav>
