--- a/records.html
+++ b/records.html
@@ -45,8 +45,15 @@
       margin-bottom: 16px;
     }
     .nav-items {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: 6px;
+      height: 100%;
+    }
+    .nav-footer {
+      margin-top: auto;
+      padding-top: 12px;
+      border-top: 1px solid rgba(148, 163, 184, 0.2);
     }
     .nav-item {
       display: block;
@@ -77,13 +84,8 @@
       margin: 0 auto;
       padding: 0 20px 80px;
     }
-    header {
-      padding: 70px 20px 40px;
-      background: radial-gradient(circle at 20% 25%, rgba(224, 242, 241, 0.35), transparent 28%), #0f172a;
-      color: #f8fafc;
-      text-align: left;
-    }
-    header .shell { padding-bottom: 30px; }
+    header { padding: 32px 20px 12px; color: var(--ink); }
+    header .shell { padding-bottom: 0; }
     h1 {
       margin: 0 0 14px;
       font-size: clamp(34px, 4vw, 46px);
@@ -92,7 +94,7 @@
     }
     .subhead {
       font-size: 1.15rem;
-      color: #dbeafe;
+      color: var(--muted);
       max-width: 680px;
       margin: 0 0 18px;
     }
@@ -324,6 +326,9 @@
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
+        <div class="nav-footer">
+          <button class="nav-item" id="records-signout" type="button">Log out</button>
+        </div>
       </nav>
     </aside>
     <div class="app-content">
@@ -331,9 +336,7 @@
         <div class="shell">
           <div class="top-row">
             <div class="tag">CarbonWise</div>
-            <div style="display:flex;gap:10px;align-items:center;">
-              <button class="btn secondary" id="records-signout">Log out</button>
-            </div>
+            <div></div>
           </div>
           <h1>My Records</h1>
           <p class="subhead">Your saved Scope 2 electricity emissions.</p>
